# gaejo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: evaluation.md  methodology.md
examples/: demo.py  eval_cases.json  evaluate.py  hil_cases.jsonl
skill/: SKILL.md
src/gaejo/: __init__.py  cli.py  detector.py  evaluator.py  hil.py  mcp_server.py  prompt.py  retention.py  score.py  transform.py
src/gaejo/data/: fewshot_pairs.json
tests/: test_cli.py  test_detector.py  test_evaluator.py  test_hil.py  test_mcp.py  test_prompt.py  test_retention.py  test_score.py  test_transform.py
