[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "gaejo"
dynamic = ["version"]
description = "한국식 연구 발표 PPT 개조식(箇條式) 어휘 다듬기 하네스"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "GAEJO Authors" }]
keywords = ["korean", "nlp", "text-style-transfer", "presentation", "개조식", "kiwipiepy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Natural Language :: Korean",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[project.optional-dependencies]
kiwi = ["kiwipiepy>=0.15"]
anthropic = ["anthropic>=0.40"]
mcp = ["mcp>=1.2"]
all = ["kiwipiepy>=0.15", "anthropic>=0.40", "mcp>=1.2"]
dev = ["kiwipiepy>=0.15", "anthropic>=0.40", "mcp>=1.2", "pytest>=7,<10", "ruff>=0.15,<0.16"]

[project.scripts]
gaejo = "gaejo.cli:main"
gaejo-mcp = "gaejo.mcp_server:main"

[project.urls]
Homepage = "https://github.com/DevMinGeonPark/gaejo"
Repository = "https://github.com/DevMinGeonPark/gaejo"
Issues = "https://github.com/DevMinGeonPark/gaejo/issues"

[tool.hatch.version]
path = "src/gaejo/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/gaejo"]

[tool.hatch.build.targets.wheel.force-include]
"src/gaejo/data/fewshot_pairs.json" = "gaejo/data/fewshot_pairs.json"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# 프롬프트 템플릿은 긴 한국어 지시문 라인을 그대로 유지
"src/gaejo/prompt.py" = ["E501"]
# 테스트는 kiwipiepy 미설치 환경을 위해 importorskip 후 임포트
"tests/*" = ["E402"]
